Fix D&D container CSS positioning so it does not overlap and hide the Governance and Compliance SVGs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,7 +515,7 @@ main {
 
 .opt-num {
     position: absolute;
-    top: 50%;
+    top: 240px;
     transform: translateY(-50%);
     width: 40px;
     height: 50px;
@@ -627,7 +627,7 @@ main {
 .activity-option::after {
     content: '';
     position: absolute;
-    top: 50%;
+    top: 240px;
     width: 60px;
     height: 2px;
     background: repeating-linear-gradient(90deg, #ccc, #ccc 5px, transparent 5px, transparent 10px);
@@ -639,7 +639,7 @@ main {
 .activity-option::before {
     content: '';
     position: absolute;
-    top: 50%;
+    top: 240px;
     width: 12px;
     height: 12px;
     border-radius: 50%;
@@ -919,8 +919,8 @@ main {
 
 .help-target {
     position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
+    top: 240px; left: 50%;
+    transform: translateX(-50%);
     width: 400px; height: 400px;
     z-index: -1;
     opacity: 0.5;
@@ -1138,9 +1138,9 @@ main {
 
 .dnd-container {
     position: absolute;
-    top: 50%;
+    top: 240px;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     width: 100%;
     display: flex;
     flex-direction: column;
